# lazy_thrust

./: README.md
examples/: CMakeLists.txt
examples/example0/: CMakeLists.txt  example0.cpp
include/lazy_thrust/: config.hpp  lazy.hpp  multi.hpp  operators.hpp  transform.hpp
